2006-08-23  Brian Cameron  <brian.cameron@sun.com>

	* daemon/gdm.h: Corrections to comments.

2006-08-21  Brian Cameron  <brian.cameron@sun.com>

        * Release 2.15.10:
        * NEWS: Updated.
        * configure.ac: Update to new release version.

2006-08-15  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.ac: Fix intltool req.
	* po/nb.po: Update this.

2006-08-08  Ray Strode <rstrode@redhat.com>

	* gui/gdmwm.[ch] (gdm_wm_center_cursor): new function
	that centers mouse pointer on one head

	* gui/greeter/greeter.c (main): center cursor on main
	xinerama head on startup (looks nicer and as a side
	effect should fix bug 327530)

2006-08-07  Brian Cameron  <brian.cameron@sun.com>

        * Release 2.15.9:
        * NEWS: Updated.
        * configure.ac: Update to new release version.

2006-08-03  Brian Cameron  <brian.cameron@sun.com>

	* daemon/slave.c: Remove calls to syslog/malloc that are called
	  from inside signal handlers, since they are not safe.  Patch
	  provided by Ray Strode <rstrode@redhat.com>.

2006-08-03  Ray Strode <rstrode@redhat.com>

	* configure.ac: look for /usr/bin/Xorg when searching for
	  X servers (bug 349836).

2006-08-03  Brian Cameron  <brian.cameron@sun.com>

	* config/gdm.conf.in, config/gdm.conf-custom: Improved comments
	  to make gdm.conf/custom.conf more clear.

2006-08-03  Brian Cameron  <brian.cameron@sun.com>

	* gui/greeter/greeter.c: Fix the setup of the iochannel so that
	  it happens after the face browser is set up.  The recent changes
	  Ray Strode made to make the message input nonblocking seemed
	  to break the Face Browser logic.  This patch makes sure that
	  the face browser is setup before setting up the iochannel.  The
	  face data is sent from the daemon to the slave along the same
	  channel, but these messages are not formatted like the other
	  messages.  Patch provided by Ray Strode <rstrode@redhat.com>.

2006-08-02  Brian Cameron  <brian.cameron@sun.com>
