@@ -1,5 +1,10 @@
 2006-08-23  Brian Cameron  <brian.cameron@sun.com>
 
+	* daemon/gdm.c: Make the SDTLOGIN logic a bit smarter and
+	  use g_unlink() instead of unlink().
+
+2006-08-23  Brian Cameron  <brian.cameron@sun.com>
+
 	* daemon/gdm.h: Corrections to comments.
 
 2006-08-21  Brian Cameron  <brian.cameron@sun.com>
